// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`modelProviderSelectors > CUSTOM_MODELS > custom deletion, addition, and renaming of models 1`] = `
[
  {
    "chatModels": [
      {
        "displayName": "llama",
        "functionCall": true,
        "id": "llama",
        "isCustom": true,
        "vision": true,
      },
      {
        "displayName": "claude-2",
        "functionCall": true,
        "id": "claude-2",
        "isCustom": true,
        "vision": true,
      },
      {
        "displayName": "gpt-4-32k",
        "functionCall": true,
        "hidden": undefined,
        "id": "gpt-4-0125-preview",
        "tokens": 128000,
      },
    ],
    "enabled": true,
    "id": "openai",
  },
]
`;

exports[`modelProviderSelectors > CUSTOM_MODELS > should work correct with gpt-4 1`] = `
[
  {
    "displayName": "GPT-3.5 Turbo (1106)",
    "functionCall": true,
    "hidden": undefined,
    "id": "gpt-3.5-turbo-1106",
    "tokens": 16385,
  },
  {
    "description": "GPT 3.5 Turbo，适用于各种文本生成和理解任务",
    "displayName": "GPT-3.5 Turbo",
    "functionCall": true,
    "hidden": undefined,
    "id": "gpt-3.5-turbo",
    "tokens": 16385,
  },
  {
    "displayName": "GPT-3.5 Turbo 16K",
    "hidden": undefined,
    "id": "gpt-3.5-turbo-16k",
    "tokens": 16385,
  },
  {
    "displayName": "GPT-4",
    "functionCall": true,
    "hidden": undefined,
    "id": "gpt-4",
    "tokens": 8192,
  },
  {
    "displayName": "GPT-4 32K",
    "functionCall": true,
    "hidden": undefined,
    "id": "gpt-4-32k",
    "tokens": 32768,
  },
  {
    "displayName": "GPT-4 Turbo Preview (1106)",
    "functionCall": true,
    "hidden": undefined,
    "id": "gpt-4-1106-preview",
    "tokens": 128000,
  },
  {
    "description": "GPT-4 视觉预览版，支持视觉任务",
    "displayName": "GPT-4 Turbo Vision Preview",
    "hidden": undefined,
    "id": "gpt-4-vision-preview",
    "tokens": 128000,
    "vision": true,
  },
]
`;

exports[`modelProviderSelectors > OPENROUTER_CUSTOM_MODELS > custom deletion, addition, and renaming of models 1`] = `
[
  {
    "chatModels": [
      {
        "description": "GPT 3.5 Turbo，适用于各种文本生成和理解任务",
        "displayName": "GPT-3.5 Turbo",
        "functionCall": true,
        "id": "gpt-3.5-turbo",
        "tokens": 16385,
      },
      {
        "displayName": "GPT-3.5 Turbo (0125)",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-3.5-turbo-0125",
        "tokens": 16385,
      },
      {
        "displayName": "GPT-3.5 Turbo (1106)",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-3.5-turbo-1106",
        "tokens": 16385,
      },
      {
        "displayName": "GPT-3.5 Turbo Instruct",
        "hidden": true,
        "id": "gpt-3.5-turbo-instruct",
        "tokens": 4096,
      },
      {
        "displayName": "GPT-3.5 Turbo 16K",
        "hidden": true,
        "id": "gpt-3.5-turbo-16k",
        "tokens": 16385,
      },
      {
        "displayName": "GPT-3.5 Turbo (0613)",
        "hidden": true,
        "id": "gpt-3.5-turbo-0613",
        "legacy": true,
        "tokens": 4096,
      },
      {
        "displayName": "GPT-3.5 Turbo 16K (0613)",
        "hidden": true,
        "id": "gpt-3.5-turbo-16k-0613",
        "legacy": true,
        "tokens": 4096,
      },
      {
        "displayName": "GPT-4 Turbo Preview",
        "functionCall": true,
        "id": "gpt-4-turbo-preview",
        "tokens": 128000,
      },
      {
        "displayName": "GPT-4 Turbo Preview (0125)",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-0125-preview",
        "tokens": 128000,
      },
      {
        "description": "GPT-4 视觉预览版，支持视觉任务",
        "displayName": "GPT-4 Turbo Vision Preview",
        "id": "gpt-4-vision-preview",
        "tokens": 128000,
        "vision": true,
      },
      {
        "displayName": "GPT-4 Turbo Preview (1106)",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-1106-preview",
        "tokens": 128000,
      },
      {
        "displayName": "GPT-4",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4",
        "tokens": 8192,
      },
      {
        "displayName": "GPT-4 (0613)",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-0613",
        "tokens": 8192,
      },
      {
        "displayName": "GPT-4 32K",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-32k",
        "tokens": 32768,
      },
      {
        "displayName": "GPT-4 32K (0613)",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-32k-0613",
        "tokens": 32768,
      },
      {
        "displayName": "GPT-4 ALL",
        "files": true,
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-all",
        "tokens": 32768,
        "vision": true,
      },
    ],
    "enabled": true,
    "id": "openai",
  },
  {
    "chatModels": [
      {
        "displayName": "google/gemma-7b-it",
        "functionCall": true,
        "id": "google/gemma-7b-it",
        "isCustom": true,
        "vision": true,
      },
      {
        "displayName": "Mistral-7B-Instruct",
        "functionCall": true,
        "id": "mistralai/mistral-7b-instruct",
        "isCustom": true,
        "vision": true,
      },
    ],
    "enabled": true,
    "id": "openrouter",
  },
]
`;
